<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Air Canary</string>
    <string name="hello_world">Air Canary!</string>
    <string name="menu_settings">Settings</string>
    <string name="initial_ppm">10.5</string>
    <string name="novalue">--</string>
    <string name="title_activity_site_grid">SiteGrid</string>
    <string name="pm_label">PM 2.5</string>
    <string name="pm_unit">\u00B5g/m<sup>3</sup></string>
    <string name="ozone_label">Ozone</string>
    <string name="ozone_unit">ppm</string>
    <string name="wind_label">Wind</string>
    <string name="wind_unit">mph</string>
    <string name="temp_label">Temp</string>
    <string name="temp_unit">\u00B0 F</string>
    <string name="observed_label">Last updated</string>
	<string name="today_label">Today</string>
	<string name="tomorrow_label">Tomorrow</string>
	<string name="dat_label">--</string>
	
</resources>