<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="16dp"
        android:text="Current Conditions"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#cccccc"
        android:orientation="vertical" >

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/pm_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/PmValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="12.8"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:text="@string/pm_unit" />

    </RelativeLayout>
    
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#cccccc"
            android:orientation="vertical" >

    </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/ozone_label"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/OzValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="0.015"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:text="@string/ozone_unit" />

    </RelativeLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#cccccc"
                android:orientation="vertical" >

    </LinearLayout>
    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Temperature"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/TempValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="32.5"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:text="Fahrenheit" />

    </RelativeLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#cccccc"
                android:orientation="vertical" >

    </LinearLayout>
    
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Wind"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/WindValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="6 SE"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:text="mph" />

    </RelativeLayout>
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="#cccccc"
                android:orientation="vertical" >

    </LinearLayout>

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="24dp"
                android:text="Forecast Conditions"
                android:textAppearance="?android:attr/textAppearanceMedium" />
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#cccccc"
        android:orientation="vertical" >

    </LinearLayout>
    <LinearLayout
        android:id="@+id/ForecastContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp" >

        <LinearLayout
            android:id="@+id/TodayForecastContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TodayLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today_label" />

            <TextView
                android:id="@+id/TodayValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="8dp"
                android:text="@string/novalue"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/TomorrowForecastContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TomorrowLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tomorrow_label" />

            <TextView
                android:id="@+id/TomorrowValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="8dp"
                android:text="@string/novalue"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/DatForecastContainer"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/DatLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dat_label" />

            <TextView
                android:id="@+id/DatValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:minHeight="100dp"
                android:minWidth="100dp"
                android:padding="8dp"
                android:text="@string/dat_label"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="8dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/ObservedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/observed_label"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/ObservedValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/novalue"
            android:textSize="12sp" />

    </LinearLayout>

</LinearLayout>